--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <div class="flex flex-col md:flex-row gap-6 md:gap-8">
             <!-- Thumbnail -->
             <div class="md:w-64 flex-shrink-0">
-              <div class="aspect-video bg-gray-100 dark:bg-gray-800 rounded-lg overflow-hidden">
+              <div class="aspect-video bg-gray-100 dark:bg-gray-800 rounded-lg overflow-hidden border">
                 <img src="assets/images/gsap-thumb.png" alt="GSAP Interaction 썸네일"
                   class="w-full h-full object-cover"
                   onerror="this.parentElement.innerHTML='<div class=\'w-full h-full flex items-center justify-center text-gray-400 dark:text-gray-600 text-sm\'>No Image</div>'">
@@ -227,7 +227,7 @@
         <article class="project-item">
           <div class="md:flex gap-6">
             <div class="md:w-64 md:flex-shrink-0 mb-4 md:mb-0">
-              <div class="w-full aspect-video bg-gray-100 dark:bg-gray-800 rounded-lg overflow-hidden">
+              <div class="w-full aspect-video bg-gray-100 dark:bg-gray-800 rounded-lg overflow-hidden border">
                 <img src="assets/images/invitation-thumb.png" alt="모바일 청첩장 썸네일"
                   class="w-full h-full object-cover"
                   onerror="this.parentElement.innerHTML='<div class=\'w-full h-full flex items-center justify-center text-gray-400 dark:text-gray-600 text-sm\'>No Image</div>'">
@@ -284,7 +284,7 @@
         <article class="project-item">
           <div class="md:flex gap-6">
             <div class="md:w-64 md:flex-shrink-0 mb-4 md:mb-0">
-              <div class="w-full aspect-video bg-gray-100 dark:bg-gray-800 rounded-lg overflow-hidden">
+              <div class="w-full aspect-video bg-gray-100 dark:bg-gray-800 rounded-lg overflow-hidden border">
                 <img src="assets/images/mureact-thumb.png" alt="muReactTemplate 썸네일"
                   class="w-full h-full object-cover"
                   onerror="this.parentElement.innerHTML='<div class=\'w-full h-full flex items-center justify-center text-gray-400 dark:text-gray-600 text-sm\'>No Image</div>'">
@@ -339,7 +339,7 @@
         <article class="project-item">
           <div class="md:flex gap-6">
             <div class="md:w-64 md:flex-shrink-0 mb-4 md:mb-0">
-              <div class="w-full aspect-video bg-gray-100 dark:bg-gray-800 rounded-lg overflow-hidden">
+              <div class="w-full aspect-video bg-gray-100 dark:bg-gray-800 rounded-lg overflow-hidden border">
                 <img src="assets/images/shinsegae-thumb.png" alt="신세계 면세점 썸네일"
                   class="w-full h-full object-cover"
                   onerror="this.parentElement.innerHTML='<div class=\'w-full h-full flex items-center justify-center text-gray-400 dark:text-gray-600 text-sm\'>No Image</div>'">
